--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,6 @@ p {
 .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid black;
-    box-shadow: 5px 10px black;
+    border: 5px solid red;
+    box-shadow: 5px 10px solid grey;
 }
