--- a/assets/style.css
+++ b/assets/style.css
@@ -32,5 +32,5 @@ p {
     width: 80%;
     margin: 40px auto;
     border: 5px solid red;
-    box-shadow: 5px 10px solid grey;
+    box-shadow: 5px 10px  grey;
 }
